--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "phpmailer/phpmailer": "~5.2"
+        "phpmailer/phpmailer": "~5.2",
+        "dompdf/dompdf": "0.7.x@beta",
+        "spipu/html2pdf": "4.6.0"
     }
 }
